# Multimodal-Research-RAG

./: .env  README.md  pyproject.toml  requirements.txt
ChromaDB/: chroma.sqlite3
src/: Audio_Parser.py  Image_Input.py  Image_Parser.py  Retriver.py  Speech_Output.py  Voice_input.py  app.py  embedding_pipeline.py  main.py  parser.py  saving_embedding_model.py  vectordb.py
src/static/: app.js  index.html  style.css
